Amend: minor adjustment to hero image position to ensure center-aligned on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,7 +45,8 @@ h1, h2, h3 {
     background-size: cover;
     width: 100%;
     height: 50vh;
-    background-position: center center;
+    /* To keep image center-aligned on smaller screens */
+    background-position: 46%;
 }
 
 /* About Section */
@@ -65,7 +66,7 @@ h1, h2, h3 {
 }
 
 /* Tips Section */
-/* Grid messing */
+/* CSS Grid to control layout */
 
 .tips-grid {
     display: grid;
